//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  userId String [pk]
  username String [unique, not null]
  createTime DateTime [default: `now()`, not null]
  passwordHash String [not null]
  displayName String [not null]
  avatarPath String
  status UserStatus [not null, default: 'available']
  message Message [not null]
  userRoom UserRoom [not null]
  rooms Room [not null]
  UserMessage UserMessage [not null]
}

Table Room {
  roomId String [pk]
  roomType RoomType [not null]
  roomDisplayName String
  roomAvatar String
  message Message [not null]
  userRoom UserRoom [not null]
  user User [not null]
}

Table UserRoom {
  username String [not null]
  roomId String [not null]
  joinedAt DateTime [default: `now()`, not null]
  isAdmin Boolean [not null, default: false]
  isBlocked Boolean [not null, default: false]
  lastReadMessageId String
  isHidden Boolean [not null, default: false]
  isNotificationMuted Boolean [not null, default: false]
  isMarkedFavourite Boolean [not null, default: false]
  isPinned Boolean [not null, default: false]
  user User [not null]
  room Room [not null]

  indexes {
    (username, roomId) [pk]
  }
}

Table Message {
  key String [pk]
  senderUsername String [not null]
  roomId String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  editedAt DateTime
  contentType MessageContentType [not null]
  sender User [not null]
  room Room [not null]
  userMessage UserMessage [not null]

  indexes {
    (senderUsername, key) [unique]
  }
}

Table UserMessage {
  messageKey String [not null]
  username String [not null]
  isHidden Boolean [not null, default: false]
  isNotificationMuted Boolean [not null, default: false]
  isMarkedFavourite Boolean [not null, default: false]
  isPinned Boolean [not null, default: false]
  user User [not null]
  message Message [not null]

  indexes {
    (username, messageKey) [pk]
  }
}

Table Session {
  id String [pk]
  sid String [unique, not null]
  data String [not null]
  expiresAt DateTime [not null]
}

Enum UserStatus {
  available
  dnd
  hidden
}

Enum RoomType {
  private
  group
}

Enum MessageContentType {
  audio
  video
  text
  image
  file
}

Ref: UserRoom.username > User.username [delete: Cascade]

Ref: UserRoom.roomId > Room.roomId [delete: Cascade]

Ref: Message.senderUsername > User.username [delete: Cascade]

Ref: Message.roomId > Room.roomId [delete: Cascade]

Ref: UserMessage.username > User.username [delete: Cascade]

Ref: UserMessage.messageKey > Message.key